# Azure-DH-Calc

./: FEATURE_LOG.md  LICENSE  README.md  package-lock.json  package.json  pyproject.toml
.devcontainer/: devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md  pull_request_template.md
.github/workflows/: ci.yml  swa.yml
data/cache/westeurope/: hosts.json  vms.json
src/azure_dh_calc/: __init__.py  cache.py  calculator.py  cli.py  host_catalog.py  models.py  price_cache_populator.py  pricing_client.py  vm_catalog.py
src/azure_dh_calc.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/routes/: +page.svelte
tests/: test_cache.py  test_calculator.py
