[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "azure-dh-calc"
version = "0.1.0"
description = "Azure Dedicated Hosts cost & capacity calculator"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [ { name = "Your Name" } ]
dependencies = [
  "requests>=2.32.3",
  "typer>=0.12.3",
  "rich>=13.7.1"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.2",
  "pytest-cov>=5.0.0",
  "ruff>=0.5.5"
]

[project.scripts]
azure-dh-calc = "azure_dh_calc.cli:app"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
addopts = "-q --disable-warnings"
testpaths = ["tests"]
